fixtures/runtime/valid/superglobals/argc.php
<?php
echo $argc;
echo "\n";
