fixtures/runtime/invalid/constants/undefined.php
<?php
echo PROMPT24_MISSING_CONSTANT;
